--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -73,7 +73,7 @@ version_format = "${raw}"
 symbol = ""
 style = "fg:black bg:#56b6c2"
 format = "[ $symbol v$version ]($style)"
-version_format = "v${raw}"
+version_format = "${raw}"
 
 # ── Go ────────────────────────────────────────────────────
 [golang]
