--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -46,7 +46,6 @@
   "editor.semanticHighlighting.enabled": true,
   "editor.occurrencesHighlight": "singleFile",
   "editor.selectionHighlight": true,
-  "editor.wordHighlightDelay": 300,
   "editor.copyWithSyntaxHighlighting": false,
   "editor.multiCursorModifier": "ctrlCmd",
   "editor.columnSelection": false,
@@ -59,7 +58,7 @@
   "editor.unfoldOnClickAfterEndOfLine": false,
   "editor.showUnused": true,
   "editor.showDeprecated": true,
-  "editor.inlayHints.enabled": "on",
+  "editor.inlayHints.enabled": "off",
   "editor.unicodeHighlight.ambiguousCharacters": false,
   "editor.unicodeHighlight.invisibleCharacters": false,
   "editor.experimental.asyncTokenization": true,
@@ -70,7 +69,6 @@
   "workbench.editor.enablePreview": false,
   "workbench.editor.enablePreviewFromQuickOpen": false,
   "workbench.editor.showTabs": "multiple",
-  "workbench.editor.tabCloseButton": "right",
   "workbench.editor.tabSizing": "shrink",
   "workbench.editor.wrapTabs": false,
   "workbench.editor.scrollToSwitchTabs": false,
@@ -87,9 +85,7 @@
   "workbench.settings.editor": "ui",
   "workbench.settings.useSplitJSON": true,
   "workbench.commandPalette.history": 50,
-  "workbench.quickOpen.closeOnFocusOut": true,
   "workbench.tips.enabled": false,
-  "workbench.welcome.enabled": true,
   // ===== WINDOW SETTINGS =====
   "window.zoomLevel": 0,
   "window.newWindowDimensions": "inherit",
@@ -103,9 +99,6 @@
   "window.closeWhenEmpty": false,
   "window.confirmBeforeClose": "keyboardOnly",
   "window.dialogStyle": "native",
-  "window.nativeTabs": false,
-  "window.nativeFullScreen": true,
-  "window.clickThroughInactive": true,
   // ===== EXPLORER SETTINGS =====
   "explorer.openEditors.visible": 1,
   "explorer.confirmDelete": true,
@@ -139,7 +132,6 @@
   "search.useIgnoreFiles": true,
   "search.useParentIgnoreFiles": false,
   "search.maintainFileSearchCache": true,
-  "search.runInExtensionHost": true,
   "search.quickOpen.includeHistory": true,
   "search.quickOpen.includeSymbols": false,
   "search.showLineNumbers": false,
@@ -165,7 +157,6 @@
   },
   "files.hotExit": "onExit",
   "files.defaultLanguage": "",
-  "files.maxMemoryForLargeFilesMB": 4096,
   "files.exclude": {
     ".vscode": true,
     "**/.DS_Store": true,
@@ -197,7 +188,6 @@
     "Cargo.lock": "toml"
   },
   // ===== TERMINAL SETTINGS =====
-  "terminal.integrated.shell.linux": "/usr/bin/zsh",
   "terminal.integrated.fontFamily": "'JetBrains Mono', 'Fira Code', 'Cascadia Code', monospace",
   "terminal.integrated.fontSize": 14,
   "terminal.integrated.lineHeight": 1.2,
@@ -252,7 +242,7 @@
   "git.autoStash": false,
   "git.autofetch": false,
   "git.autofetchPeriod": 180,
-  "git.confirmSync": true,
+  "git.confirmSync": false,
   "git.enableSmartCommit": true,
   "git.enableCommitSigning": false,
   "git.decorations.enabled": true,
@@ -329,7 +319,6 @@
   "breadcrumbs.symbolSortOrder": "position",
   "breadcrumbs.icons": true,
   "breadcrumbs.showFiles": true,
-  "breadcrumbs.showSymbols": true,
   "breadcrumbs.showKeys": false,
   "breadcrumbs.showNull": false,
   "breadcrumbs.showBooleans": false,
@@ -360,9 +349,6 @@
   "typescript.updateImportsOnFileMove.enabled": "always",
   "javascript.suggest.autoImports": true,
   "typescript.suggest.autoImports": true,
-  "javascript.preferences.quotes": "single",
-  "typescript.preferences.quotes": "single",
-  "javascript.preferences.includePackageJsonAutoImports": "auto",
   "typescript.preferences.includePackageJsonAutoImports": "auto",
   "javascript.suggest.enabled": true,
   "typescript.suggest.enabled": true,
@@ -374,97 +360,33 @@
   "typescript.inlayHints.enumMemberValues.enabled": false,
   "js/ts.implicitProjectConfig.checkJs": false,
   "js/ts.implicitProjectConfig.experimentalDecorators": false,
-  // Python
-  "python.defaultInterpreterPath": "/usr/bin/python3",
-  "python.linting.enabled": true,
-  "python.linting.pylintEnabled": false,
-  "python.linting.flake8Enabled": true,
-  "python.formatting.provider": "black",
-  "python.sortImports.args": [
-    "--profile",
-    "black"
-  ],
-  "python.analysis.typeCheckingMode": "basic",
-  "python.analysis.autoSearchPaths": true,
-  "python.analysis.autoImportCompletions": true,
-  "python.analysis.diagnosticMode": "workspace",
-  "python.analysis.stubPath": "typings",
-  "python.analysis.typeshedPaths": [],
-  "python.analysis.autoFormatStrings": false,
-  "python.analysis.completeFunctionParens": false,
   // Rust
-  "rust-analyzer.checkOnSave.command": "clippy",
-  "rust-analyzer.cargo.allFeatures": true,
   "rust-analyzer.procMacro.enable": true,
   "rust-analyzer.inlayHints.parameterHints.enable": false,
   "rust-analyzer.inlayHints.typeHints.enable": true,
   "rust-analyzer.inlayHints.chainingHints.enable": true,
-  "rust-analyzer.completion.addCallParenthesis": false,
-  "rust-analyzer.completion.addCallArgumentSnippets": true,
   "rust-analyzer.lens.enable": true,
   "rust-analyzer.lens.run.enable": true,
   "rust-analyzer.lens.debug.enable": true,
   "rust-analyzer.lens.implementations.enable": false,
-  "rust-analyzer.lens.references.enable": false,
-  "rust-analyzer.lens.methodReferences.enable": false,
-  "rust-analyzer.lens.enumVariantReferences.enable": false,
   // C# .NET
-  "dotnet.defaultSolution.enabled": true,
   "dotnet.completion.showCompletionItemsFromUnimportedNamespaces": true,
   "dotnet.inlayHints.enableInlayHintsForParameters": true,
   "dotnet.inlayHints.enableInlayHintsForLiteralParameters": true,
   "dotnet.inlayHints.enableInlayHintsForIndexerParameters": true,
   "dotnet.inlayHints.enableInlayHintsForObjectCreationParameters": true,
   "dotnet.inlayHints.enableInlayHintsForOtherParameters": true,
-  "dotnet.inlayHints.enableInlayHintsForTypes": true,
-  "dotnet.inlayHints.enableInlayHintsForImplicitVariableTypes": true,
-  "dotnet.inlayHints.enableInlayHintsForLambdaParameterTypes": true,
-  "dotnet.inlayHints.enableInlayHintsForImplicitObjectCreation": true,
   "dotnet.symbolSearch.searchReferenceAssemblies": true,
   "dotnet.preferCSharpExtension": true,
   "csharp.format.enable": true,
-  "csharp.inlayHints.parameters.enabled": true,
-  "csharp.inlayHints.parameters.forLiteralParameters": true,
-  "csharp.inlayHints.parameters.forIndexerParameters": true,
-  "csharp.inlayHints.parameters.forObjectCreationParameters": true,
-  "csharp.inlayHints.parameters.forOtherParameters": true,
-  "csharp.completion.showCompletionItemsFromUnimportedNamespaces": true,
   "csharp.semanticHighlighting.enabled": true,
   "omnisharp.enableEditorConfigSupport": true,
-  "omnisharp.enableRoslynAnalyzers": true,
   "omnisharp.useModernNet": true,
-  // Go
-  "go.useLanguageServer": true,
-  "go.formatTool": "goimports",
-  "go.lintTool": "golangci-lint",
-  "go.lintOnSave": "package",
-  "go.vetOnSave": "package",
-  "go.buildOnSave": "package",
-  "go.installDependenciesWhenBuilding": false,
-  "go.useCodeSnippetsOnFunctionSuggest": false,
-  "go.autocompleteUnimportedPackages": true,
-  "go.gocodePackageLookupMode": "go",
-  "go.inferGopath": false,
-  "go.gotoSymbol.includeImports": false,
-  "go.gotoSymbol.includeGoroot": false,
-  "go.useCodeSnippetsOnFunctionSuggestWithoutType": true,
-  "go.generateTestsFlags": [
-    "-exported"
-  ],
   // JSON
   "json.schemas": [],
   "json.format.enable": true,
   "json.validate.enable": true,
   "json.trace.server": "off",
-  // YAML
-  "yaml.format.enable": true,
-  "yaml.validate": true,
-  "yaml.hover": true,
-  "yaml.completion": true,
-  "yaml.schemas": {},
-  "yaml.schemaStore.enable": true,
-  "yaml.customTags": [],
-  "yaml.maxItemsComputed": 5000,
   // Markdown
   "markdown.preview.fontSize": 14,
   "markdown.preview.lineHeight": 1.6,
@@ -476,9 +398,6 @@
   "markdown.preview.markEditorSelection": true,
   "markdown.preview.scrollEditorWithPreview": true,
   "markdown.preview.doubleClickToSwitchToEditor": true,
-  "markdown.extension.orderedList.marker": "ordered",
-  "markdown.extension.orderedList.autoRenumber": true,
-  "markdown.extension.list.indentationSize": "inherit",
   // HTML
   "html.format.enable": true,
   "html.format.wrapLineLength": 120,
@@ -488,7 +407,6 @@
   "html.format.preserveNewLines": true,
   "html.format.maxPreserveNewLines": null,
   "html.format.indentHandlebars": false,
-  "html.format.endWithNewline": false,
   "html.format.indentInnerHtml": false,
   "html.format.wrapAttributes": "auto",
   "html.format.templating": false,
@@ -496,7 +414,6 @@
   "html.suggest.html5": true,
   // CSS
   "css.validate": true,
-  "css.colorDecorators.enable": true,
   "css.lint.compatibleVendorPrefixes": "ignore",
   "css.lint.vendorPrefix": "warning",
   "css.lint.duplicateProperties": "warning",
@@ -565,7 +482,6 @@
   "eslint.autoFixOnSave": false,
   "eslint.quiet": false,
   "eslint.packageManager": "npm",
-  "eslint.alwaysShowStatus": false,
   "eslint.codeAction.disableRuleComment": {
     "enable": true,
     "location": "separateLine"
@@ -588,41 +504,6 @@
   ],
   "eslint.runtime": null,
   "eslint.nodePath": null,
-  // Live Server
-  "liveServer.settings.donotShowInfoMsg": true,
-  "liveServer.settings.donotVerifyTags": true,
-  "liveServer.settings.host": "localhost",
-  "liveServer.settings.port": 5500,
-  "liveServer.settings.root": "/",
-  "liveServer.settings.CustomBrowser": "null",
-  "liveServer.settings.AdvanceCustomBrowserCmdLine": "null",
-  "liveServer.settings.NoBrowser": false,
-  "liveServer.settings.ignoreFiles": [
-    ".vscode/**",
-    "**/*.scss",
-    "**/*.sass",
-    "**/*.ts"
-  ],
-  // GitLens
-  "gitlens.currentLine.enabled": false,
-  "gitlens.hovers.currentLine.over": "line",
-  "gitlens.codeLens.enabled": false,
-  "gitlens.blame.format": "${message|50?} ${agoOrDate|14-}",
-  "gitlens.blame.heatmap.enabled": false,
-  "gitlens.blame.avatars": false,
-  "gitlens.blame.compact": false,
-  "gitlens.blame.dateFormat": null,
-  "gitlens.blame.line.enabled": false,
-  "gitlens.blame.toggleMode": "file",
-  "gitlens.changes.locations": [
-    "gutter",
-    "line",
-    "overview"
-  ],
-  "gitlens.heatmap.ageThreshold": 90,
-  "gitlens.plusFeatures.enabled": false,
-  "gitlens.showWelcomeOnInstall": false,
-  "gitlens.showWhatsNewAfterUpgrades": false,
   // Auto Rename Tag
   "auto-rename-tag.activationOnLanguage": [
     "html",
@@ -634,13 +515,6 @@
     "typescriptreact",
     "vue"
   ],
-  // Bracket Pair Colorizer (deprecated, using built-in)
-  "bracket-pair-colorizer-2.depreciation-notice": false,
-  // Path Intellisense
-  "path-intellisense.extensionOnImport": false,
-  "path-intellisense.showHiddenFiles": true,
-  "path-intellisense.autoSlashAfterDirectory": false,
-  "path-intellisense.absolutePathToWorkspace": true,
   // TODO Highlight
   "todohighlight.isEnable": true,
   "todohighlight.isCaseSensitive": true,
@@ -744,13 +618,6 @@
   "csharp.inlayHints.enableInlayHintsForLambdaParameterTypes": true,
   "csharp.inlayHints.enableInlayHintsForImplicitObjectCreation": true,
   "dotnet.formatting.organizeImportsOnFormat": false,
-  "mssql.connectionGroups": [
-    {
-      "name": "ROOT",
-      "id": "9A5581A7-89A1-4A98-99D4-D795EB62EFF0"
-    }
-  ],
-  "trae.chatLanguage": "en",
   "github.copilot.chat.codeGeneration.instructions": [
     {
       "file": "code-style.md"
