-config for ionic - config for gnupg

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -28,3 +28,7 @@ Host github.com
     IdentityFile ~/.ssh/github_ed25519
     IdentitiesOnly yes
     
+Host vs-ssh.visualstudio.com
+    User WarChildNL
+    IdentityFile ~/.ssh/github_relief
+    IdentitiesOnly yes
